src/test/ui/parser/trait-pub-method.stderr
error: unnecessary visibility qualifier
  --> $DIR/trait-pub-method.rs:2:5
   |
LL |     pub fn foo();
   |     ^^^ `pub` not permitted here

error: aborting due to previous error

