src/test/ui/parser/trait-pub-method.rs
trait Foo {
    pub fn foo();
    //~^ ERROR unnecessary visibility qualifier
}

fn main() {}
